CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0        |
+-----------------------+
BUGFIXES
30-07-06    Fixed bug where admins details could not be saved (jwang1973)
14-07-06    Email sending returns PEAR errors on fails, this was not checked
            properly
14-07-06    Updates fixed on generated modules
12-06-06    Fixed bug where detect missing perms didn't work on windows installs
            (Marian Seitner)
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
05-08-06    Implemented full module install/uninstall for admin users
05-08-06    Renamed DA_Default::retrieveAllModules to DA_Default::getModuleHash()
            to improve clarity
02-08-06    Added regex tests for SGL_Sql::parse() (Randy Casburn)
01-08-06    Added a security step in installer (Steven Stremciuc)
01-08-06    Implemented admin GUI for ContentTypeMgr (AJ Tarachanowicz)
30-07-06    A big update to the Polish translation (Thomas Osmialowski)
30-07-06    XML_Parser error avoided by inspecting allow_url_fopen setting
            (Steven Stremciuc)
29-07-06    Extracted execution from SGL_Sql::parseAndExecute(), added ability to
            extract all table names from a schema file
27-07-06    Added possibility to customise defaults in installer (Eric Persson)
27-07-06    Minimal modules and no sample data are now defaults
27-07-06    Removed dependencies between blocks and sections, you can now install
            blocks only when the relevant module is installed
27-07-06    Rebuilding Seagull can now be done with or without sample data
26-07-06    Moved all navigation from default SQL data to PHP arrays (see
            $module/data/navigation.php)
15-07-06    Enhancements to newsletter module (Rares Benea)
15-07-06    Enhancements to guestbook module (Rares Benea)
14-07-06    Installer description and keywords correctly added to meta tags (getconfused)