@@ -4,6 +4,8 @@ CHANGELOG
 | VERSION: 0.6.0        |
 +-----------------------+
 BUGFIXES
+05-08-06    Fixed error returned when requesting a non-existent article
+            (AJ Tarachanowicz)
 30-07-06    Fixed bug where admins details could not be saved (jwang1973)
 14-07-06    Email sending returns PEAR errors on fails, this was not checked
             properly
